Create remaining sections of webpage.
Styled hero section with flex display. Remaining sections styled to match requirements. Small adjustments needed on information section as well as how resizing will work. Using random images as placeholder and need to update content to not be default.

--- a/index.html
+++ b/index.html
@@ -36,10 +36,68 @@
                 <button>Sign up</button>
             </div>
             <div class="right-container">
-                <img src="./images/colors-and-fonts.png" alt="Placeholder" width="400" height="300">
+                <img src="./images/colors-and-fonts.png" alt="Placeholder">
             </div>
         </div>
     </div>
+
+    <div class="info">
+        <h3>Some random information.</h3>
+        <div class="info-item-container">
+            <div class="info-item">
+                <img src="./images/linux-logo.png" alt="Picture of the linux penguin logo.">
+                <div class="info-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime deleniti
+                    distinctio
+                    eligendi hic cupiditate? Inventore, voluptatibus eligendi? Dolorum illo error tempore, magnam nam
+                    veniam
+                    quis, maxime id vero at enim.</div>
+            </div>
+            <div class="info-item">
+                <img src="./images/linux-logo.png" alt="Picture of the linux penguin logo.">
+                <div class="info-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime deleniti
+                    distinctio
+                    eligendi hic cupiditate? Inventore, voluptatibus eligendi? Dolorum illo error tempore, magnam nam
+                    veniam
+                    quis, maxime id vero at enim.</div>
+            </div>
+            <div class="info-item">
+                <img src="./images/linux-logo.png" alt="Picture of the linux penguin logo.">
+                <div class="info-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime deleniti
+                    distinctio
+                    eligendi hic cupiditate? Inventore, voluptatibus eligendi? Dolorum illo error tempore, magnam nam
+                    veniam
+                    quis, maxime id vero at enim.</div>
+            </div>
+            <div class="info-item">
+                <img src="./images/linux-logo.png" alt="Picture of the linux penguin logo.">
+                <div class="info-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime deleniti
+                    distinctio eligendi
+                    hic cupiditate? Inventore, voluptatibus eligendi? Dolorum illo error tempore, magnam nam veniam
+                    quis, maxime id
+                    vero at enim.</div>
+            </div>
+        </div>
+    </div>
+
+    <div class="quote">
+        <figure>
+            <q cite="">The greatest glory in living lies not in never falling, but in rising every time we fall. </q>
+            <figcaption> &mdash; Nelson Mandela
+            </figcaption>
+        </figure>
+    </div>
+
+    <div class="call-to-action">
+        <div class="sign-up">
+            <div class="sign-up-info">
+                <p class="p-bold">Call to action! It's time!</p>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button>Sign up</button>
+        </div>
+    </div>
+
+    <footer> Copyright &copy; Jeff O 2023</footer>
 </body>
 
 </html>
